name changed to index.html

--- a/second/Team.html
+++ b/second/Team.html
@@ -47,7 +47,7 @@
 
 			</ul>
 			<div class="piede">
-				<a href ="../UpToYou.html" ><p><h3>Home page</h3></a>
+				<a href ="../index.html" ><p><h3>Home page</h3></a>
 				<a href="hardware.html"><p><h3>Hardware</h3></a>
 				<a href="software.html"><p><h3>Software</h3></a>
 			</div>
