--- a/second/hardware.html
+++ b/second/hardware.html
@@ -27,7 +27,7 @@
             Il materiale è tutto riciclato e riciclabile attraverso l’utilizzo di legno, alluminio o il riuso di oggetti comuni.<br>
             Il tutto è alimentato da una batteria lipo da 7.4 Volt.<br>
 
-            <a href="../UpToYou.html"><h3>Pagina Iniziale</h3></a>
+            <a href="../index.html"><h3>Pagina Iniziale</h3></a>
         </p>
     </div>
     <div class="immagini_destra_testo">
