--- a/second/software.html
+++ b/second/software.html
@@ -22,7 +22,7 @@
         Questa tecnologia offre una vasta gamma di applicazioni, dall'ambito accademico alla sicurezza<br>
         informatica e oltre. <br>
     </p>
-    <a href = "../UpToYou.html"><h3>Pagina Iniziale</h3></a>
+    <a href = "../index.html"><h3>Pagina Iniziale</h3></a>
 </div>
 <div class="immagini">
 
